# lumina-py

./: .gitignore  LICENSE  README.md  exdreader.py  main.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
lumina/: exdreader.py
lumina/data/: sqpack.py  structs.py
