[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.pylint.messages_control]
max-line-length = 120
good-names = ["f", "i", "j", "k", "x", "y", "z",
# TODO: remove later after CRC32 is rewritten
"a", "b", "c", "d"]
