[metadata]
name = lumina-py
version = attr: lumina.__version__
author = Nonowazu
author_email = oowazu.nonowazu@gmail.com
description = SqPack reader made in python, based on C sharp Lumina
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requies = >=3.7
include_package_data = True
packages = find:

[options.extras_require]
dev = 
    black==23.1.0
    pylint==2.16.2